--- a/max/menu.html
+++ b/max/menu.html
@@ -246,8 +246,13 @@
                 #indhold p {
                     width: 700px;
                 }
+
+                #popup {
+                    z-index: 5;
+                }
             }
         }
+
     </style>
 </head>
 
@@ -348,6 +353,7 @@
                 document.querySelector("#popup").style.display = "none";
             }
         }
+
     </script>
 
 </body>
